--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
+    "expo": "^51.0.2",
+    "expo-image": "~1.12.9",
+    "expo-image-picker": "~15.0.4",
+    "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.23.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.5"
   },
   "private": true
 }
