--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.6.8",
     "expo": "^51.0.2",
     "expo-image": "~1.12.9",
-    "expo-image-picker": "~15.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -27,7 +27,10 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "expo-camera": "~15.0.9",
+    "expo-contacts": "~13.0.3",
+    "expo-sensors": "~13.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5"
