--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.23.0",
     "expo-camera": "~15.0.9",
     "expo-contacts": "~13.0.3",
-    "expo-sensors": "~13.0.7"
+    "expo-sensors": "~13.0.7",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5"
