--- a/app.json
+++ b/app.json
@@ -35,7 +35,6 @@
       }
     },
     "owner": "john_lopez",
-
     "plugins": [
       [
         "expo-image-picker",
@@ -43,7 +42,8 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends.",
           "cameraPermission": "The app accesses your camera to let you take photos and share them with your friends."
         }
-      ]
+      ],
+      "expo-font"
     ]
   }
 }
