--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^51.0.2",
+    "expo": "^51.0.8",
+    "expo-camera": "~15.0.9",
+    "expo-contacts": "~13.0.3",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.5",
     "expo-image": "~1.12.9",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
-    "expo-status-bar": "~1.11.1",
+    "expo-sensors": "~13.0.7",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.23.0",
-    "expo-camera": "~15.0.9",
-    "expo-contacts": "~13.0.3",
-    "expo-sensors": "~13.0.7",
-    "expo-file-system": "~17.0.1"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5"
