--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
@@ -16,8 +17,8 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^1.6.8",
-    "expo": "^51.0.8",
+    "axios": "^1.7.2",
+    "expo": "^51.0.0",
     "expo-camera": "~15.0.9",
     "expo-contacts": "~13.0.3",
     "expo-file-system": "~17.0.1",
@@ -33,14 +34,16 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.23.0"
+    "react-native-web": "~0.19.10",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5"
+    "@babel/core": "^7.24.0",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0"
   },
   "private": true
 }
