--- a/package.json
+++ b/package.json
@@ -13,29 +13,34 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "^51.0.0",
-    "expo-camera": "~15.0.9",
-    "expo-contacts": "~13.0.3",
+    "expo": "~51.0.14",
+    "expo-camera": "~15.0.11",
+    "expo-contacts": "~13.0.4",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.5",
-    "expo-image": "~1.12.9",
+    "expo-font": "~12.0.7",
+    "expo-image": "~1.12.12",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
-    "expo-sensors": "~13.0.7",
+    "expo-sensors": "~13.0.8",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1"
